
    *******************************************************
    Warnings, errors, malfunctions, code patches, suggestions
    Support Forum: http://www.freezedown.org/forum
    (order is reverse-chronologic)
    ******************************************************* 
     

Darkbot 8rc3: Sep 17 2008
	- Topics can now start with these commands that check for too
          many arguments. Say you want to do:

             dbtest add info+things hey N~, I don't have info on things.

          Before this, a parsing error would invoke the "info" command. 
          This has been fixed, and the bot will now either not respond
          to these inquiries if they don't exist in it's database, or
          provide the desired reply. 
	- Added "too_many" parameter into the chanserv_command struct.
          This specifies to the command parser if a command sent to the
	  bot should be checked for having too many arguments. This 
          particular change helps fix a number of issues which would 
          cause headache, and will be fine tuned more thoroughly when
          I get the chance.
	- More parser errors fixed. Added ILN in additon to ILC.
	- add stats function now has subsequent call to free() 
	  after the malloc() call. (Duh? What happened to that?)
	- Fixed ILC. Oops on my part for breaking it.
	- Part command no longer tries to output "I left the room" 
	  message to the channel it parts.
	- Updated TODO.
	- Changed all command function parsing. Things should hopefully
	  work more correctly again.
	- HLIST (Helperlist) command now allows multiple arguments.
	  For instead if you want to list all users level 3 and level 3,
	  you would do !HLIST 3 2.
	- Fixed tell command to tell people about topics without having
          do delimit them with '+' signs, so it runs like normal text now
  	  for multi-word topics.
	- Fixed sleep command. It now actually sleeps for the specified
	  amount of time, if any is specified. 